<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/temp_converter_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_tamma"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/thermometer"
        android:layout_width="148dp"
        android:layout_height="105dp"
        android:contentDescription="@string/thermometer_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/temp_converter_title"
        app:layout_constraintTop_toTopOf="@+id/temp_converter_title"
        app:srcCompat="@drawable/thermometer" />

    <ImageView
        android:id="@+id/celsius_logo"
        android:layout_width="119dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/celcius_thermometer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp_converter_title"
        app:srcCompat="@drawable/degrees_celsius" />

    <EditText
        android:id="@+id/celsius_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/celcius"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/celsius_logo"
        app:layout_constraintTop_toTopOf="@+id/celsius_logo" />

    <ImageView
        android:id="@+id/fahrenheit_logo"
        android:layout_width="119dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/fahrenheit_thermometer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/degrees_fahrenheit" />

    <EditText
        android:id="@+id/fahrenheit_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/fahrenheit"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toStartOf="@+id/fahrenheit_logo"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fahrenheit_logo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/arrows"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celsius_logo"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/arrows_black" />

    <Button
        android:id="@+id/convert_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/convert"
        app:layout_constraintEnd_toStartOf="@+id/round_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round_up" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/convert_btn"
        app:layout_constraintTop_toTopOf="@+id/convert_btn" />

    <Switch
        android:id="@+id/round_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/round_up_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fahrenheit_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>